full pass, except on empirical section

--- a/test_accuracy_paper/test_accuracy.tex
+++ b/test_accuracy_paper/test_accuracy.tex
@@ -104,9 +104,10 @@
 
 \title{%
 (((
+ORIG: 
 A Surprising Power Law Relationship Predicts Trends in the Test Accuracy for Very Deep Neural Networks
-\\ OR )))\\ 
-Heavy-Tailed Universality Predicts Surprising Trends in Test Accuracies for Deep Neural Networks
+\\ OR ))) \\ 
+Heavy-Tailed Universality Predicts Trends in Test Accuracies for Very Large Pre-Trained Deep Neural Networks
 }
 
 \author{%
@@ -136,8 +137,8 @@ Michael W. Mahoney\thanks{ICSI and Department of Statistics, University of Calif
 \input{test_accuracy_empirical}
 \input{test_accuracy_discussion}
 
-%\bibliographystyle{unsrt}
-\bibliographystyle{plain}
+\bibliographystyle{unsrt}
+%\bibliographystyle{plain}
 
 {\small
 %\bibliography{gen_gap}
